k8s/pod.azure-secretprovider.yaml
kind: Pod
apiVersion: v1
metadata:
  name:  test-azure-secretprovider
  labels:
    azure.workload.identity/use: "true"
spec:
  restartPolicy: Never
  serviceAccountName: kube-prometheus-stack-grafana
  containers:
    - name: alpinespc-test
      image: docker.io/library/alpine:3.23.3
      command:
        - /bin/sh
      args:
        - "-c"
        - "-e"
        - |-
          echo ""
          echo "Example commands to use:"
          echo "See mounted passwords:    ls -al /mnt/secrets-store/"
          echo "Show password content:    cat /mnt/secrets-store/Grafana-AdminPassword"
          echo "Use command from kubectl: kubectl exec test-azure-secretprovider -- ls -al /mnt/secrets-store/"
          sleep infinity
      volumeMounts:
      - name: secrets-store-inline
        mountPath: "/mnt/secrets-store"
        readOnly: true
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 250m
          memory: 256Mi
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: vertex-secretprovider-grafana
