k8s/app.hashicorp-vault-public-aks.yaml
---
# See https://wiki.getshifting.com/akshashicorpvault for more information on this deployment.
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
spec:
  parentRefs:
  - name: gateway
  hostnames: ["aks.getshifting.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ui
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - name: vault-ui
      port: 8200
---
kind: Pod
apiVersion: v1
metadata:
  name: alpine-spc
spec:
  serviceAccountName: shift-sa
  restartPolicy: Never
  containers:
    - name: alpine-addon
      image: alpine:3.24.1
      args:
        - |-
          apk update
          apk add --no-cache curl busybox-extras bash
          sleep infinity
      command:
        - "/bin/sh"
        - "-c"
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 250m
          memory: 256Mi
      volumeMounts:
      - name: secrets-store-inline
        mountPath: "/mnt/secrets-store"
        readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "shift-app-spc"
---
kind: Pod
apiVersion: v1
metadata:
  name: alpine-spc-sync
spec:
  serviceAccountName: shift-sa
  restartPolicy: Never
  containers:
    - name: alpine-addon
      image: alpine:3.24.1
      args:
        - |-
          apk update
          apk add --no-cache curl busybox-extras bash
          sleep infinity
      command:
        - "/bin/sh"
        - "-c"
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 250m
          memory: 256Mi
      volumeMounts:
      - name: secrets-store-inline
        mountPath: "/mnt/secrets-store"
        readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "shift-app-spc-sync"
